# PyHask

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyhask.cabal  stack.yaml
example/: CHANGELOG.md  README.md  pyhask-example.cabal  stack.yaml
example/py-src/: Lib.py  requirements.txt
example/src/: Lib.hs
src/: Main.hs
src/PyHask/: Cmd.hs  Lib.hs
