name:                pyhask
version:             0.0.0.2
synopsis:            Parse Haskell FFI exports, generate Python code using ctypes.
description:         Please see README.md
homepage:            https://github.com/TRManderson/pyhask#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2017 Tom Manderson
category:            FFI, Python
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     PyHask.Lib
  build-depends:       base >= 4 && <= 5
                     , language-python < 0.6 && >= 0.5
                     , ghc

executable pyhask
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       PyHask.Cmd
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pyhask