name:                pyhask-example
version:             0.0.0.2
synopsis:            Basic FFI library to test out
description:         Please see README.md
homepage:            https://github.com/TRManderson/pyhask/tree/master/example
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2017 Tom Manderson
category:            FFI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -shared -dynamic -O2 -fPIC -optl-Wl
  extra-libraries:     HSrts
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TRManderson/pyhask
